components/java-quarkusss/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: aaa
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: java-quarkusss
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eljava-quarkusss
  namespace: kkanova
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-java-quarkusss
    weight: null
status: {}
